[package]
edition = "2021"
name = "juniper_demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14.14", features = ["full"]}
juniper = "0.15.7"
juniper_hyper = "0.8.0"
pretty_env_logger = "0.4.0"
tokio = {version = "1.13.0", features = ["full"]}
